--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "hasan/wedevs-db-examples",
+    "name": "hasan/wpdb-crud",
     "description": "Assignment for a CRUD operation using $wpdb of WordPress",
     "type": "wordpress-plugin",
     "license": "GPLv2.0",
     "autoload": {
         "psr-4": {
-            "Hasan\\WedevsDbExamples\\": "inc/"
+            "WpdbCrud\\": "inc/"
         }
     },
     "authors": [
@@ -15,5 +15,17 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
+	},
+	"require-dev": {
+		"wp-coding-standards/wpcs": "^3.0"
+	},
+	"scripts": {
+		"lint": "phpcs",
+		"lint:fix": "phpcbf"
+	}
 }
