--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "autoload": {
         "psr-4": {
             "WpdbCrud\\": "inc/"
-        }
+        },
+		"files": ["inc/helpers.php"]
     },
     "authors": [
         {
